--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -3,6 +3,51 @@ For more detailed information, please see the git log.
 
 These release notes can also be consulted at https://easybuild.readthedocs.io/en/latest/Release_notes.html.
 
+v3.6.0 (April 25th 2018)
+------------------------
+
+feature release
+- major new features:
+  - (experimental) support for generating Singularity container recipes & (optionally) images via 'sudo singularity' (#2332)
+- various enhancements, including:
+  - enable caching of $HOME/.cache/pip in Travis config (#2435)
+  - avoid that '--inject-checksums' adds lines longer than 120 characters (#2434)
+  - loosen commit message requirements w.r.t. to patches as long as all easyconfigs are new (#2438)
+  - make diff_stat pattern also match output of older git versions in tests for --new/update-pr (#2444)
+  - replace raw strings with bytes literal as iterator sentinels in checksum calculation (#2446)
+  - new command-line option `--job-max-jobs` to cap nr of submitted build jobs (#2378)
+  - add configuration for houndci + flake8 (#2451)
+  - add Accept header when downloading file (#2437)
+  - include running of 'eb --check-github' in Travis config (#2449)
+  - flesh out common code blocks in test/framework/options.py (#2452)
+  - add support for a new toolchain, gomkl. (#2455)
+  - automatically add 'new' and/or 'update' labels in --new-pr (#2384)
+  - include -ftree-vectorize and -fno-math-errno in default compiler optimisation flags for GCC (#2388)
+  - support depends_on "load" statements in generated modules via --module-depends-on and module_depends_on easyconfig parameter (#2391)
+  - introduce golf: compiler toolchain with GCC, OpenBLAS, and FFTW. (#2458)
+  - new compiler+linalg toolchains: pmkl and gmkl (PGI+MKL and GCC+MKL) (#2460)
+  - Cuda toolchains gmklc, gomklc, iimklc, iompic, iomklc (#2461)
+  - add support for "eb --fetch" to only download sources (even without having a modules tool installed) (#2457)
+  - fix compatibility with Modules v4.1.x (#2470)
+  - add support to run_cmd to enable streaming output (#2476)
+- various bug fixes, including:
+  - determine whether included easyblocks are generic or not based on class they define (#2432)
+  - make sure GitHub token is used in test for --preview-pr (#2436)
+  - test for custom commit message when deleting a file instead of when adding a patch (#2443)
+  - take into account that toolchain components may be hidden when determining toolchain composition (#2440)
+  - specify GitHub login ID used in tests to --check-github in Travis config (#2454)
+  - stick to autopep8 1.3.4 when testing with Python 2.6 (#2462)
+  - add force_in_dry_run=True to copy_file in copy_patch_files (#2442)
+  - strip off .lua extension when backing up modules to ensure Lmod 6.x doesn't pick up on them (#2463)
+  - check for modulecmd.tcl before modulecmd in bootstrap script to discriminate between Modules 4.1.x vs 3.2.10 (#2468)
+  - fix derive_alt_pypi_url after PyPI switching to sha256 in package URLs + fix broken test for pypi_source_urls + fix bootstrap script (#2471)
+  - make sure that both 'get_git_revision' and 'this_is_easybuild' return regular strings rather than Unicode strings (#2472)
+  - remove duplicates from --new-pr title (#2478)
+  - fix running --containerize --container-build-image with --extended-dry-run (#2480)
+  - let --prefix also affect --containerpath + include 'containerpath' in output of 'eb --show-config' (#2481)
+  - resolve location of singularity command before running 'sudo singularity build' (#2482)
+
+
 v3.5.3 (March 7th 2018)
 -----------------------
 
