--- a/test/framework/modules/CategorizedHMNS/Compiler/GCC/6.4.0-2.28/mpi/OpenMPI/2.1.2
+++ b/test/framework/modules/CategorizedHMNS/Compiler/GCC/6.4.0-2.28/mpi/OpenMPI/2.1.2
@@ -7,7 +7,7 @@ proc ModulesHelp { } {
 
 module-whatis {Description: The Open MPI Project is an open source MPI-2 implementation. - Homepage: http://www.open-mpi.org/}
 
-set root    /tmp/software/Compiler/GCC/6.4.0-2.28/mpi/OpenMPI/2.1.2-no-OFED
+set root    /tmp/software/Compiler/GCC/6.4.0-2.28/mpi/OpenMPI/2.1.2
 
 conflict    OpenMPI
 module use /tmp/modules/all/MPI/GCC/6.4.0-2.28/OpenMPI/2.1.2/base
