--- a/RELEASE_NOTES
+++ b/RELEASE_NOTES
@@ -9,7 +9,7 @@ v3.9.3 (July 8th 2019)
 update/bugfix release
 
 - various enhancements, including:
-  - add a URL whatis to the modules (#2933)
+  - add a URL whatis line to generated module files (#2933)
 - various bug fixes, including:
   - stick to Ubuntu Trusty when testing with Python 2.6 in Travis (#2928)
   - honor --tmp-logdir when determining location of temporary log file (#2937)
